--- a/src/LagoVista.XPlat.Core/Views/DeviceAccess/DeviceView.xaml
+++ b/src/LagoVista.XPlat.Core/Views/DeviceAccess/DeviceView.xaml
@@ -2,21 +2,80 @@
 <pge:LagoVistaContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
              xmlns:trs="clr-namespace:LagoVista.XPlat.Core.Extensions;assembly=LagoVista.XPlat.Core"
-             xmlns:ctls="clr-namespace:LagoVista.XPlat.Core"
              RightMenu="Edit"
              EditCommand="{Binding EditDeviceCommand}"
              LeftMenu="Cancel"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="{trs:ClientTranslate DeviceView_Title}"
              x:Class="LagoVista.XPlat.Core.Views.DeviceAccess.DeviceView">
-    <pge:LagoVistaContentPage.MainContent >
-        <Grid>
-            
-        </Grid>
-    </pge:LagoVistaContentPage.MainContent>
-    <!--<pge:LagoVistaContentPage.Tabs>
-        <ctls:Tab Label="Device" Icon="fa-microchip" />
-        <ctls:Tab Label="Properties" Icon="fa-microchip" />
-        <ctls:Tab Label="Details" Icon="fa-microchip" />
-    </pge:LagoVistaContentPage.Tabs>-->
+    <!--
+                Device Summary (Basic Device Info, and BT connection info)
+                Properties (Things that can be set via device config)
+                Details (Attributes)
+                More
+                (
+                    Live Console (BT)
+                    Live Messages
+                    Messages 
+                    Data Archives
+                    IO Config
+                    Components
+                    DFU
+                    Provision
+                    Device Twin
+                )
+            -->
+
+
+    <pge:LagoVistaContentPage.Resources>
+        <Style x:Key="LabelContent" >
+            <Setter Property="TextColor" Value="{StaticResource LabelText}" />
+            <Setter Property="FontSize" Value="Large" />
+            <Setter Property="FontAttributes" Value="Bold" />
+        </Style>
+
+        <Style x:Key="ValueContent">
+            <Setter Property="TextColor" Value="{StaticResource PageText}" />
+            <Setter Property="FontSize" Value="Small" />
+        </Style>
+    </pge:LagoVistaContentPage.Resources>
+    <pge:LagoVistaContentPage.TabbedContent>
+        <pge:TabContentHolder>
+            <pge:TabContent>
+                <Grid Padding="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="33*" />
+                        <ColumnDefinition Width="66*" />
+                    </Grid.ColumnDefinitions>
+
+                    <pge:Label Text="{Binding Device.DeviceNameLabel}" Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelContent}"  />
+                    <pge:Label Text="{Binding Device.Name}" Grid.Column="1" Grid.Row="0" Style="{StaticResource ValueContent}"  />
+
+                    <pge:Label Text="{Binding Device.DeviceIdLabel}" Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelContent}" />
+                    <pge:Label Text="{Binding Device.DeviceId}" Grid.Column="1" Grid.Row="1" Style="{StaticResource ValueContent}" />
+
+                    <pge:Label Text="{trs:ClientTranslate DeviceView_Status}" Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelContent}"  />
+                    <pge:Label Text="{Binding Device.Status.Text}" Grid.Column="1" Grid.Row="2" Style="{StaticResource ValueContent}"  />
+
+                    <pge:Label Text="{trs:ClientTranslate DeviceView_LastContact}" Grid.Row="3" Grid.Column="0" Style="{StaticResource LabelContent}"   />
+                    <pge:Label Text="{Binding Device.LastContact, Converter={StaticResource DatePrinterConverter}}" Grid.Row="3" Grid.Column="1" Style="{StaticResource ValueContent}"  />
+                </Grid>
+            </pge:TabContent>
+        </pge:TabContentHolder>
+    </pge:LagoVistaContentPage.TabbedContent>
+
+    <pge:LagoVistaContentPage.TabBar>
+        <pge:TabBar>
+            <pge:Tab Label="Device" Icon="fa-microchip" />
+            <pge:Tab Label="Properties" Icon="fa-microchip" />
+            <pge:Tab Label="Details" Icon="fa-microchip" />
+            <pge:Tab Label="More" Icon="fa-microchip" />
+        </pge:TabBar>
+    </pge:LagoVistaContentPage.TabBar>
 </pge:LagoVistaContentPage>
